metadata/force-app/main/default/objects/Case/fields/Case_Lead__c.field-meta.xml
<CustomField>
    <fullName>Case_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>