metadata/force-app/main/default/objects/Case/fields/TypeDetail__c.field-meta.xml
<CustomField>
    <fullName>TypeDetail__c</fullName>
    <label>Type Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Metadata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>