metadata/force-app/main/default/objects/Case/listViews/Approved_Change_Requests.listView-meta.xml
<ListView>
    <fullName>Approved_Change_Requests</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.TYPE</columns>
    <columns>TypeDetail__c</columns>
    <columns>Application__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Submitter__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>Change Request</value>
    </filters>
    <label>Approved Change Requests</label>
</ListView>